# auto_aim

./: .gitignore  CMakeLists.txt  PoseSolver.cpp  PoseSolver.hpp  README.md  auto.sh  auto1.sh  build.sh  main.cpp
606/: main.cpp
ArmorDetector/: ArmorDetector.cpp  ArmorDetector.hpp
Configs/OpenVINO2022/: armor_detector.yaml
Configs/pose_solver/: camera_params.xml
Detector/ApexDetector/: ApexDetector.cpp  ApexDetector.hpp
Detector/ArmorDetector/: ArmorDetector.cpp  ArmorDetector.hpp
Detector/OpenVINO2022/: openvino_detector.cpp  openvino_detector.hpp  types.hpp
KalmanFilter/: KalmanFilter.cpp  KalmanFilter.h
MVCamera/: MVCamera.cpp  MVCamera.hpp  mv_video_capture.hpp
PoseSolver/: PoseSolver.cpp  PoseSolver.hpp
Predictor/: KalmanPredictor.cpp  KalmanPredictor.h  PredictorKalman.cpp  PredictorKalman.hpp
Serial/: Serial.cpp  Serial.hpp
fmt/doc/: syntax.rst
fmt/include/fmt/: color.h
fmt/test/: ranges-test.cc
run_code/: main.cpp
utils/: fps.cpp  fps.hpp  general.cpp  general.hpp
